# wasm-runtime

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  deny.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  fuzz.yml  performance.yml  release.yml
benchmarks/: bootstrap_tools.py  build_fixtures.py  check_regression.py  http_compare.py  http_soak.py
benchmarks/fixtures/json-http-tool/: Cargo.toml
benchmarks/fixtures/json-http-tool/src/: lib.rs
benchmarks/fixtures/p2-http-hello/: Cargo.toml
benchmarks/fixtures/p2-http-hello/src/: lib.rs
benchmarks/results/: http-capacity-linux-x86_64-2026-07-18.json  http-capacity-linux-x86_64-alpha.4.json  http-direct-linux-x86_64-2026-07-18.json  http-direct-linux-x86_64-alpha.4.json  http-linux-x86_64-alpha.3.json  http-soak-linux-x86_64-alpha.4.json  http-tcp-linux-x86_64-2026-07-18.json  http-tcp-linux-x86_64-alpha.4.json  performance-comparison-alpha.4.md
deploy/systemd/: runtrue-wasm-host.service
docs/: api-stability.md  benchmark-methodology.md  cache-operations.md  performance-regressions.md  production-isolation.md  release-gates.md  releasing.md  security.md  soak-testing.md
examples/: componentize.rs  http_benchmark.rs  http_capacity_benchmark.rs  http_server.rs  pause_benchmark.rs  raw_wasmtime_http_server.rs  tier_benchmark.rs
fuzz/: .gitignore  Cargo.toml  deny.toml
fuzz/corpus/disk_aot_corruption/: metadata
fuzz/corpus/http_capabilities/: malformed-request
fuzz/fuzz_targets/: component_admission.rs  disk_aot_corruption.rs  http_capabilities.rs
scripts/: cache-admin.sh  checkpoint-migration-ci.sh  package-consumer-smoke.sh  release-check.sh
scripts/package-consumer/: main.rs
src/: cache.rs  checkpoint.rs  config.rs  environment.rs  error.rs  http.rs  lib.rs  measurement.rs  runtime.rs  types.rs  wasix_output.rs  wasix_worker.rs
tests/: cache_operations.rs  environment_manifest.rs  failure_containment.rs  http_security.rs  http_service.rs  http_stress.rs  runtime.rs  wasix_cohort.rs  wasix_snapshot_fixture.rs  wasix_worker_capture.rs  wasix_worker_migration.rs  wasix_worker_protocol.rs  wasix_worker_restore.rs
tests/fixtures/: NOTICE.md  json-http-tool.component.wasm  oversized-output.component.wasm  oversized_output.rs  p2-http-hello.component.wasm  p3-http-hello.component.wasm  p3-http-proxy.component.wasm  p3-http-sleep.component.wasm  wasix-checkpoint-number.wasm  wasix_checkpoint_number.rs
