[package]
name = "runtrue-wasm-runtime"
version = "0.1.0-alpha.2"
edition = "2024"
rust-version = "1.94"
license = "Apache-2.0"
description = "A standards-first WASI Component runtime with cold, warmish, and warm tiers"
repository = "https://github.com/runtrue/wasm-runtime"
publish = false

[dependencies]
bytes = "=1.11.1"
hex = "=0.4.3"
hmac = "=0.12.1"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
sha2 = "=0.10.9"
thiserror = "=2.0.17"
tokio = { version = "=1.51.1", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
wasmtime = { version = "=46.0.1", default-features = false, features = ["cache", "component-model", "component-model-async", "component-model-bytes", "cranelift", "runtime"] }
wasmtime-wasi = { version = "=46.0.1", default-features = false, features = ["p2", "p3"] }

[dev-dependencies]
tempfile = "=3.23.0"
wat = "=1.251.0"

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
