[package]
name = "runtrue-wasm-runtime"
version = "0.1.0-alpha.3"
edition = "2024"
rust-version = "1.94"
license = "Apache-2.0"
description = "A standards-first WASI Component runtime with cold, warmish, and warm tiers"
repository = "https://github.com/runtrue/wasm-runtime"
homepage = "https://github.com/runtrue/wasm-runtime"
documentation = "https://docs.rs/runtrue-wasm-runtime"
readme = "README.md"
keywords = ["webassembly", "wasi", "wasmtime", "runtime", "aot"]
categories = ["wasm"]
publish = ["crates-io"]
exclude = [
    "/.github/**",
    "/benchmarks/results/**",
]

[dependencies]
bytes = "=1.11.1"
http = "=1.4.0"
http-body-util = "=0.1.3"
hex = "=0.4.3"
hmac = "=0.12.1"
hyper = { version = "=1.9.0", default-features = false, features = ["http1", "server"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
sha2 = "=0.10.9"
thiserror = "=2.0.17"
tokio = { version = "=1.51.1", features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
wasmtime = { version = "=46.0.1", default-features = false, features = ["cache", "component-model", "component-model-async", "component-model-bytes", "cranelift", "runtime"] }
wasmtime-wasi = { version = "=46.0.1", default-features = false, features = ["p2", "p3"] }
wasmtime-wasi-http = { version = "=46.0.1", default-features = false, features = ["component-model-async", "default-send-request", "p2", "p3"] }

[dev-dependencies]
tempfile = "=3.23.0"
wat = "=1.251.0"
wit-component = "=0.244.0"

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
