[package]
name = "runtrue-wasm-runtime"
version = "0.1.0-alpha.5"
edition = "2024"
rust-version = "1.94"
license = "Apache-2.0"
description = "A standards-first WASI Component runtime with cold, warmish, and warm tiers"
repository = "https://github.com/runtrue/wasm-runtime"
homepage = "https://github.com/runtrue/wasm-runtime"
documentation = "https://docs.rs/runtrue-wasm-runtime"
readme = "README.md"
keywords = ["webassembly", "wasi", "wasmtime", "runtime", "aot"]
categories = ["wasm"]
publish = ["crates-io"]
exclude = [
    "/.github/**",
    "/benchmarks/results/**",
]

[features]
default = []
wasix = [
    "dep:nix",
    "dep:wasmer",
    "dep:wasmer-package",
    "dep:wasmer-wasix",
    "dep:webc",
]

[dependencies]
bytes = "=1.11.1"
http = "=1.4.0"
http-body-util = "=0.1.3"
hex = "=0.4.3"
hmac = "=0.12.1"
hyper = { version = "=1.9.0", default-features = false, features = ["http1", "server"] }
nix = { version = "=0.30.1", optional = true, default-features = false, features = ["dir", "user"] }
rustix = { version = "=1.1.4", features = ["process", "thread"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
sha2 = "=0.10.9"
thiserror = "=2.0.17"
tokio = { version = "=1.51.1", features = ["io-util", "macros", "net", "process", "rt", "rt-multi-thread", "sync", "time"] }
wasmer = { version = "=7.1.0", optional = true, default-features = false, features = ["cranelift", "wat"] }
wasmer-package = { version = "=0.701.0", optional = true }
wasmer-wasix = { version = "=0.701.0", optional = true, default-features = false, features = ["sys-minimal"] }
wasmtime = { version = "=46.0.1", default-features = false, features = ["cache", "component-model", "component-model-async", "component-model-bytes", "cranelift", "runtime"] }
wasmtime-wasi = { version = "=46.0.1", default-features = false, features = ["p2", "p3"] }
wasmtime-wasi-http = { version = "=46.0.1", default-features = false, features = ["component-model-async", "default-send-request", "p2", "p3"] }
webc = { version = "=11.0.0", optional = true, default-features = false, features = ["v3"] }

[dev-dependencies]
tempfile = "=3.23.0"
wat = "=1.251.0"
wit-component = "=0.244.0"

[target.'cfg(target_os = "linux")'.dev-dependencies]
# WASIX 0.701's journal feature does not compile with sys-minimal, so keep the
# broad journal-capable runtime confined to the Linux-only qualification test.
wasmer = { version = "=7.1.0", default-features = false, features = ["cranelift"] }
wasmer-wasix = { version = "=0.701.0", default-features = false, features = ["sys"] }

[[bin]]
name = "runtrue-wasix-worker"
path = "src/bin/runtrue-wasix-worker.rs"
required-features = ["wasix"]

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
